# ml_pipeline

./: .gitignore  main.py  pyproject.toml
conf/: config.yaml
conf/env/: dev.yaml  prod.yaml
conf/model/: catboost.yaml  tensorflow.yaml
libs/: data_extraction.py  data_validation.py  model_training.py
schemas/: item.py
